todoyu timetracking changelog

timetracking 1.1.2 - not released yet
	* Translation: Polish

timetracking 1.1.1 - 2011-09-15
	* Changed: timetracking icon (changed from alarm clock to stopwatch)
	* Bugfix: Spelling mistake in rights (track - editOwn, editOwnChargeable)
	* Changed: Add field for task presets directly to the fieldset quicktaskSpecific
	* Changed: Adapted registered hooks due rename in project extension
	* Added: Hooks: timetracking.start, timetracking.stop

timetracking 1.1.0 - 2011-06-17
	* Feature: Extended task CSV export with tracked time sum
	* Feature: Extended task CSV export with chargeable time
	* Feature: Change status color of task in timetracking headlet on status change
	* Changed: Requires core 2.1
	* Changed: Structure for 2.1
	* Changed: All classes are prefixed with extension name
	* Feature: Rights Cleanup - Fixed missing init methods in controller
	* Feature: Added rights checks


timetracking 1.0.6
	* Changed: Changed comment field of timetrack to varchar(250)
	* Bugfix: quicktask creation option "start timetracking" was shown to persons w/o timetracking access
	* Feature: Ext init Cleanup
	* Bugfix: timetracking task filter joins were not separated from where, query used 100% of MySQL resources
	* Bugfix: Last tracked tasks in timetracking headlet
	* Feature: Added italian translation
	* Bugfix: HTML encoding in timetracking headlet
	* Bugfix: Malformed mock-up of timetrack comments with long text
	* Bugfix: Current timetracking was not visible in chrome
	* Feature: Merged all tracking request into a single request (much faster now)
	* Feature: Added indexes to tables to improve SQL performance